--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -559,6 +557,7 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
+                        <outlet property="mTabBar" destination="W28-zg-YXA" id="Bc4-7M-m8P"/>
                         <segue destination="riG-Id-5RL" kind="relationship" relationship="viewControllers" id="Llh-26-Yya"/>
                         <segue destination="2Ad-aW-YsJ" kind="relationship" relationship="viewControllers" id="bzK-T1-JO5"/>
                         <segue destination="36q-eX-WSN" kind="relationship" relationship="viewControllers" id="ief-uK-HoB"/>
@@ -752,7 +751,7 @@
         <scene sceneID="9sV-Av-9h6">
             <objects>
                 <navigationController id="riG-Id-5RL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Sales Leads" image="business" id="Hwa-Mu-Rzs"/>
+                    <tabBarItem key="tabBarItem" title="Sales Leads" image="business" badgeValue="111" id="Hwa-Mu-Rzs"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eYu-zY-2da">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1675,25 +1674,25 @@
     </scenes>
     <resources>
         <image name="app_share_qrcode" width="400" height="400"/>
-        <image name="business" width="24" height="24"/>
-        <image name="default_image" width="48" height="48"/>
-        <image name="ic_account_box" width="24" height="24"/>
-        <image name="ic_border_all" width="24" height="24"/>
-        <image name="ic_cloud_upload" width="24" height="24"/>
-        <image name="ic_language" width="24" height="24"/>
-        <image name="ic_more_horiz" width="24" height="24"/>
-        <image name="ic_photo_camera" width="24" height="24"/>
-        <image name="ic_share" width="24" height="24"/>
+        <image name="business" width="48" height="48"/>
+        <image name="default_image" width="96" height="96"/>
+        <image name="ic_account_box" width="48" height="48"/>
+        <image name="ic_border_all" width="48" height="48"/>
+        <image name="ic_cloud_upload" width="48" height="48"/>
+        <image name="ic_language" width="48" height="48"/>
+        <image name="ic_more_horiz" width="48" height="48"/>
+        <image name="ic_photo_camera" width="48" height="48"/>
+        <image name="ic_share" width="48" height="48"/>
         <image name="icons8-qr-code-filled-40" width="40" height="40"/>
         <image name="icons8-相机-40" width="40" height="40"/>
-        <image name="ocr" width="24" height="24"/>
-        <image name="qrcode" width="24" height="24"/>
+        <image name="ocr" width="36" height="36"/>
+        <image name="qrcode" width="36" height="36"/>
         <image name="qrcode-scan" width="24" height="24"/>
-        <image name="qrcode-scan-multi" width="40" height="40"/>
-        <image name="redcycle" width="20" height="20"/>
+        <image name="qrcode-scan-multi" width="30" height="30"/>
+        <image name="redcycle" width="9.6000003814697266" height="9.6000003814697266"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Lod-K2-e7i"/>
+        <segue reference="lQL-al-B4s"/>
         <segue reference="7Fn-HG-vAR"/>
         <segue reference="32D-md-z5T"/>
     </inferredMetricsTieBreakers>
