listview add badge

--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1692,7 +1692,7 @@
         <image name="redcycle" width="9.6000003814697266" height="9.6000003814697266"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Lod-K2-e7i"/>
+        <segue reference="lQL-al-B4s"/>
         <segue reference="7Fn-HG-vAR"/>
         <segue reference="32D-md-z5T"/>
     </inferredMetricsTieBreakers>
