--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                     <action selector="onBillQrCodeClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Z7l-Li-Buv"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bill No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Yot-00-lWu">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1. Bill No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Yot-00-lWu">
                                 <rect key="frame" x="16" y="80" width="249" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kmb-Kc-D6u"/>
@@ -114,7 +114,7 @@
                                     <action selector="onPAQRCodeClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="pBl-Bz-aqb"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PA No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bdv-iI-ctg">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2. PA or Item No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bdv-iI-ctg">
                                 <rect key="frame" x="16" y="137" width="249" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="4Am-b0-0PX"/>
